tests/ui/unique_field_missing.stderr
error[E0609]: no field `username` on type `&User`
 --> tests/ui/unique_field_missing.rs:8:17
  |
8 | #[derive(Debug, Validate)]
  |                 ^^^^^^^^ unknown field
  |
  = note: this error originates in the derive macro `Validate` (in Nightly builds, run with -Z macro-backtrace for more info)
